# jepa-vision

./: .gitignore  CLAUDE.md  DECISIONS.md  HANDOFF.md  LICENSE  PLAYBOOK.md  PROJECT_STATE.md  README.md  pyproject.toml
configs/: diag_fixed_target.yaml  mae_baseline.yaml  overfit.yaml  phase1_hardmask.yaml  phase1_ref.yaml  phase2_scratch.yaml  phase2_warmstart.yaml  resume_part1.yaml  resume_test.yaml
data/splits/: resisc45_quarantine.json  resisc45_test_idx.json  resisc45_train_idx.json  resisc45_val_idx.json  stl10_val_idx.json
reports/: phase1.md  probe_seed0_val.md  probe_vs_epoch.md  scratch_manifest.json  scratch_v2_manifest.json  terminal_dryrun.md  terminal_test_progress.jsonl  terminal_val.md  terminal_val_s4gap.md
reports/energy_dumps/: clean_hardmask_s0*_test.npy  clean_hardmask_s0*_val.npy  clean_mae_trained_test.npy  clean_mae_trained_val.npy  clean_mae_untrained_test.npy  (+17 more)
scripts/: baseline_sanity.py  build_resisc45_splits.py  gen_phase1_figs.py  k_sweep.py  mask_stats.py  parity_gate_1p.py  patch_imagecorruptions.py  probe_diag.py  probe_on_test.py  probe_smoke.py  probe_sweep.py  probe_vs_epoch.py  recompute_ref_s1.py  run_scratch_comparator.py  run_scratch_comparator_v2.py  smoke_aerial.py  smoke_test.py  terminal_benchmark.py  timing_run.py  tonight.sh  train.py  train_mae.py  visualize_masks.py
src/: checkpoint.py  diagnostics.py  loop.py
tests/: test_baselines.py  test_diagnostics.py  test_energy.py  test_imports.py  test_masking.py  test_no_best_ckpt.py  test_probe.py  test_scratch_comparator.py  test_terminal_benchmark.py
(+15 files in other folders)
