[project]
name = "jepa-vision"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "imagecorruptions>=1.1.2",
    "matplotlib>=3.10.9",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "wandb>=0.27.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
